# unofficial-wca-mcp-server

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.amazonq/: mcp.json
.kiro/specs/wca-mcp-server/: design.md  requirements.md  tasks.md
examples/: README.md  claude_desktop_config.json
src/wca_mcp_server/: __init__.py  __main__.py  client.py  config.py  main.py
src/wca_mcp_server/models/: __init__.py  base.py  competition.py  person.py  ranking.py  reference.py  requests.py  result.py
tests/: __init__.py  test_basic.py
